blocks/header/header.css
@media (width >2560px) {
  .header-wrapper {
    max-width: 2560px;
    margin-left: auto;
    margin-right: auto;
  }
}

/* stylelint-disable no-descending-specificity */
/* stylelint-disable no-duplicate-selectors */
.header .header-accordion-arrow .icon-wrapper {
  position: relative;
}

.header .header-accordion-arrow svg {
  width: 14px;
  height: 7px;
  aspect-ratio: 1/1;
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%) rotate(180deg);
}

.header .primary-menu-links-heading {
  display: flex;
  padding: var(--spacing-2, 8px);
  justify-content: center;
  align-items: center;
  gap: var(--spacing-2, 8px);
  color: var(--colours-text-text-white, #FFF);

  font-family: var(--typography-font-family-font-body, "Instrument Sans");
  font-size: var(--typography-font-size-text-base, 16px);
  font-style: normal;
  font-weight: 500;
  line-height: var(--typography-font-line-height-leading-3, 24px);
  letter-spacing: var(--typography-font-spacing-tracking-normal, 0);
}

.header .primary-menu-links-heading:has(a) .header-accordion-arrow {
  display: none;
}

/* header and nav layout */
.no-scroll {
  overflow: hidden;
  height: 100vh;
}

header.header-wrapper {
  position: fixed;
  z-index: 99;
  right: 0;
  left: 0;
  background: var(--colours-alpha-alpha-primary-70, rgba(29, 61, 81, 0.70));
  width: 100vw;
}

header .nav-wrapper {
  background-color: var(--background-color);
  width: 100%;
  z-index: 2;
  position: fixed;
}

header nav {
  box-sizing: border-box;
  display: grid;
  grid-template:
    'hamburger brand tools' var(--nav-height) 'sections sections sections' 1fr / auto 1fr auto;
  align-items: center;
  gap: 0 24px;
  margin: auto;
  max-width: 1248px;
  height: var(--nav-height);
  font-family: var(--body-font-family);
}

header nav[aria-expanded='true'] {
  grid-template:
    'hamburger brand' var(--nav-height) 'sections sections' 1fr
    'tools tools' var(--nav-height) / auto 1fr;
  overflow-y: auto;
  min-height: 100dvh;
}

@media (width >=768px) {
  .header .col-md-6 {
    flex: unset;
  }
}

@media (width >=900px) {
  header nav {
    display: flex;
    justify-content: space-between;
    gap: 0 32px;
    max-width: 1264px;
  }

  header nav[aria-expanded='true'] {
    min-height: 0;
    overflow: visible;
  }
}

header nav p {
  margin: 0;
  line-height: 1;
}

/* hamburger */
header nav .nav-hamburger {
  grid-area: hamburger;
  height: 22px;
  padding-top: 3px;
  cursor: pointer;
}

header nav .nav-hamburger button {
  height: 22px;
  margin: 0;
  border: 0;
  border-radius: 0;
  padding: 0;
  background-color: var(--background-color);
  color: inherit;
  overflow: initial;
  text-overflow: initial;
  white-space: initial;
}

header nav .nav-hamburger-icon,
header nav .nav-hamburger-icon::before,
header nav .nav-hamburger-icon::after {
  box-sizing: border-box;
  display: block;
  position: relative;
  width: 20px;
}

header nav .nav-hamburger-icon::before,
header nav .nav-hamburger-icon::after {
  content: '';
  position: absolute;
  background: currentcolor;
}

header nav[aria-expanded='false'] .nav-hamburger-icon,
header nav[aria-expanded='false'] .nav-hamburger-icon::before,
header nav[aria-expanded='false'] .nav-hamburger-icon::after {
  height: 2px;
  border-radius: 2px;
  background: currentcolor;
}

header nav[aria-expanded='false'] .nav-hamburger-icon::before {
  top: -6px;
}

header nav[aria-expanded='false'] .nav-hamburger-icon::after {
  top: 6px;
}

header nav[aria-expanded='true'] .nav-hamburger-icon {
  height: 22px;
}

header nav[aria-expanded='true'] .nav-hamburger-icon::before,
header nav[aria-expanded='true'] .nav-hamburger-icon::after {
  top: 3px;
  left: 1px;
  transform: rotate(45deg);
  transform-origin: 2px 1px;
  width: 24px;
  height: 2px;
  border-radius: 2px;
}

header nav[aria-expanded='true'] .nav-hamburger-icon::after {
  top: unset;
  bottom: 3px;
  transform: rotate(-45deg);
}

@media (width >=900px) {
  header nav .nav-hamburger {
    display: none;
    visibility: hidden;
  }
}

/* brand */
header nav .nav-brand {
  grid-area: brand;
  flex-basis: 128px;
  font-size: var(--font-size-xxs);
  font-weight: 700;
  line-height: 1;
}

header nav .nav-brand img {
  width: 128px;
  height: auto;
}

/* sections */
header nav .nav-sections {
  grid-area: sections;
  flex: 1 1 auto;
  display: none;
  visibility: hidden;
}

header nav[aria-expanded='true'] .nav-sections {
  display: block;
  visibility: visible;
  align-self: start;
}

header nav .nav-sections ul {
  list-style: none;
  padding-left: 0;
  font-size: var(--font-size-xxxs);
}

header nav .nav-sections ul>li {
  font-weight: 500;
}

header nav .nav-sections ul>li>ul {
  margin-top: 0;
}

header nav .nav-sections ul>li>ul>li {
  font-weight: 400;
}
/* ... */

